tests/snapshots/trace_solver@15512033932901969966.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: false
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: ~
  request: "[&ref mut x]: &mut [T]"
---
let [&ref mut x]: &mut [T] = s
// Applying rule `ConstructorRef`
let &ref mut x: &mut T = &mut (*s).0
// Applying rule `DerefMutWithShared`
let ref mut x: T = *&*&mut (*s).0
// Applying rule `BindingBorrow`
let x: &mut T = &mut *&*&mut (*s).0
// Applying rule `Binding`
let x: &mut T = &mut *&*&mut (*s).0

// Final bindings (simplified):
let x: &mut T = &mut *&(*s).0; // Borrow-check error: MutBorrowBehindSharedBorrow
